cluster/apps/networking-system/external-services/attic/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: attic
spec:
  hostnames: ["cachix.${SECRET_DOMAIN_1}"]
  parentRefs:
    - name: external
      namespace: networking-system
      port: 443
  rules:
    - backendRefs:
        - name: attic
          port: 8080
